# gradio-webrtc

./: .gitignore  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml  upload_space.py
.github/workflows/: docs.yml
additional-outputs/: index.html
advanced-configuration/: index.html
backend/fastrtc/: __init__.py  credentials.py  reply_on_pause.py  reply_on_stopwords.py  stream.py  tracks.py  utils.py  webrtc.py  webrtc_connection_mixin.py  websocket.py
backend/gradio_webrtc/: __init__.py  credentials.py  reply_on_pause.py  reply_on_stopwords.py  stream.py  tracks.py  utils.py  webrtc.py  webrtc_connection_mixin.py  websocket.py
cookbook/: index.html
demo/: README.md  also_return_text.py  app.py  app_.py  app_orig.py  audio_out.py  audio_out_2.py  css.css  docs.py  draw_boxes.py  echo_conversation.py  inference.py  old_app.py  requirements.txt  space.py  stream_whisper.py  talk_to_claude_index.html  talk_to_claude_stream.py  utils.py  video_out.py  video_out_stream.py  video_send_output.py
demo/echo_audio/: README.md  app.py  requirements.txt
demo/gemini_audio_video/: README.md  app.py
demo/hello_computer/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/llama_code_editor/: README.md  app.py  handler.py  requirements.in  requirements.txt  ui.py
demo/llm_voice_chat/: README.md  README_gradio.md  app.py  requirements.txt
demo/moonshine_live/: README.md  app.py  requirements.txt
demo/object_detection/: README.md  app.py  index.html  inference.py  requirements.txt  utils.py
demo/phonic_chat/: README.md  app.py  cli.py  requirements.txt
demo/talk_to_claude/: README.md  app.py  index.html  requirements.txt
demo/talk_to_gemini/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_openai/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_sambanova/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_smolagents/: README.md  app.py  requirements.txt
demo/voice_text_editor/: README.md  app.py
demo/webrtc_vs_websocket/: README.md  app.py  index.html  requirements.txt
demo/whisper_realtime/: README.md  (+4 more)
deployment/: index.html
docs/: CNAME  advanced-configuration.md  cookbook.md  deployment.md  faq.md  index.md  user-guide.md  utils.md
faq/: index.html
frontend/: Example.svelte  Index.svelte  index.ts  package-lock.json  package.json
react-whisper-demo/: README.md  package-lock.json  package.json
search/: search_index.json
stylesheets/: extra.css
user-guide/: index.html
utils/: index.html
(+50 files in other folders)
